--- a/TODO.txt
+++ b/TODO.txt
@@ -13,7 +13,6 @@
 7.) Finish distributions
 
 8.) Sections for
-    Classification
-    Regression
-    Clustering
     Rule Extraction (e.g. Recommendations)
+    Feature Selection :
+        Variance Thresholding : https://towardsdatascience.com/how-to-use-variance-thresholding-for-robust-feature-selection-a4503f2b5c3f
